// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled basic render nested 1`] = `
<h1
  className="css-wtnkt4"
>
  hello world
</h1>
`;

exports[`styled className prop on styled 1`] = `
<h1
  className="some-class css-1ussw39"
>
  hello world
</h1>
`;

exports[`styled no dynamic 1`] = `
<h1
  className="css-1ksfqms"
>
  hello world
</h1>
`;

exports[`styled writes the correct css 1`] = `
".css-1ksfqms{font-size:12px;}
.css-wtnkt4{font-size:20px;}.css-wtnkt4 span{color:blue;}.css-wtnkt4 span:hover{color:green;}.css-wtnkt4 span:hover:after{content:'after';}
.css-1ussw39{font-size:20px;}
html{background:pink;}
.css-1qm9j1o{font-family:sans-serif;color:yellow;background-color:purple;}"
`;
